--- a/css/style.css
+++ b/css/style.css
@@ -127,8 +127,8 @@ nav {
 /*첫번째 콘텐츠*/
 .contents01 {
     width: 100%;
-    height: 700px; 
-    background-color: orange; 
+    height: 600px; 
+    background-color: #fff; 
     position: relative;
 }
 .photo {
@@ -137,16 +137,30 @@ nav {
     width: 400px;
     height: 400px;
     overflow: hidden;
-    margin: 150px 50px;
+    margin: 100px 50px;
+    transform: translate(-100px, 0);
+    opacity: 0;
+    transition: all .5s ease;
+}
+.photo.show {
+    opacity: 1;
+    transform: none;
 }
 .exp {
     position: absolute;
     right: 0;
     width: 400px;
     height: auto;
-    margin: 150px 150px;
+    margin: 100px 150px;
     font-size: 20px;
     line-height: 30px;
+    transform: translate(100px, 0);
+    opacity: 0;
+    transition: all .5s ease;
+}
+.exp.show {
+    opacity: 1;
+    transform: none;
 }
 .exp b { font-size: 30px; }
 
@@ -160,6 +174,11 @@ nav {
     background-position: center; /* 이미지를 요소의 정가운데로 처리 */
     background-attachment: fixed; /* 스크롤바 움직일때 이미지가 따라다님 */
 }
+.contents01-1 {
+    width: 100%;
+    height: 600px;
+    background-color: #004;
+}
 
 /*두번째 콘텐츠*/
 .contents02 {
@@ -168,6 +187,44 @@ nav {
     background-color: orange; 
     position: relative;
 }
+.photo {
+    position: absolute;
+    float: left;
+    width: 400px;
+    height: 400px;
+    overflow: hidden;
+    margin: 100px 50px;
+}
+.exp {
+    position: absolute;
+    right: 0;
+    width: 400px;
+    height: auto;
+    margin: 100px 150px;
+    font-size: 20px;
+    line-height: 30px;
+}
+.exp b { font-size: 30px; }
+
+/*세번째 사진*/
+.fixed03{
+    width: 100%; height: 450px;
+    /* 배경이미지는 최소 1920*960으로 제작해야 문제가 안생김 */
+    background-image: url(../images/photo-3.jpg);
+    background-repeat: no-repeat; /* 배경이미지X */
+    background-size: cover; /* 요소를 비율에 맞게 커버 */
+    background-position: center; /* 이미지를 요소의 정가운데로 처리 */
+    background-attachment: fixed; /* 스크롤바 움직일때 이미지가 따라다님 */
+}
+
+/*세번째 콘텐츠*/
+.contents03 {
+    width: 100%;
+    height: 600px; 
+    background-color: orange; 
+    position: relative;
+}
+
 
 /*푸터 영역*/
 footer {
