--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,12 @@ ul {
 
 #container {
     margin: 0 auto;      /*화면 중앙에 배치*/
-    width: 1200px;       /*너비 지정*/
+    width: 100%;       /*너비 지정*/
 }
 
 /*헤더 영역*/
 header {
-    width: 100%;        /*너비*/
+    width: 1200px;        /*너비*/
     height: 100px;       /*높이*/
     background-color: #004;
 }
@@ -272,8 +272,50 @@ nav {
 
 /*푸터 영역*/
 footer {
-
     width: 100%;       /*너비*/
     height: 100px;     /*높이*/
-    background-color: gray;
+    border-top: 2px solid #222;   /*위쪽에 가로선 추가*/
+}
+.bottomMenu {
+    width: 100%;
+    height: 20px;
+    position: relative;
+}
+.bottomMenu ul {
+    margin-top: 15px;
+}
+.bottomMenu ul li {
+    float: left;
+    padding: 5px 20px;
+    border-right: 1px solid #ddd;
+}
+.bottomMenu ul li:last-child {
+    border-right: none;
+}
+.bottomMenu ul li a, .bottomMenu ul li:visited {
+    font-size: 15px;
+    color: #666;
+}
+.sns {
+    position: absolute;
+    right: 0;
+}
+.sns ul li {
+    border: none;
+    padding: 5px;
+}
+.company {
+    clear: left;
+    margin-top: 25px;
+    margin-left: 20px;
+}
+.company p {
+    font-size: 14px;
+    color: #aaa;
+    line-height: 20px;
+}
+
+@media (min-width: 768px){
+
+} background-color: gray;
 }
