--- a/css/introduce.css
+++ b/css/introduce.css
@@ -21,7 +21,7 @@ ul {
 header {
     width: 100%;        /*너비*/
     height: 100px;       /*높이*/
-    background-color: #07c;
+    background-color: #004;
 }
 
 /*로고 영역*/
@@ -60,21 +60,19 @@ nav {
     display: block;            /*링크 텍스트 블록 형태로 지정*/
     color: #fff;             /*폰트 색상*/
     font-weight: 600;          /*폰트 굵기*/
-    text-shadow: 0 1px #07c; /*그림자 추가*/
+    text-shadow: 0 1px #222; /*그림자 추가*/
     padding: 20px 100px;        /*패딩 지정*/
 }
 #topMenu > li > a > span {
     font-size: 0.5em;
 }
 #topMenu > li > a:hover {
-    color: #000;              /*마우스를 올리면 색상 바뀜*/
-    text-shadow: 0 -1px #07c; /*글자가 굵어지지 않도록 지정*/
+    text-shadow: 0 -1px #222; /*글자가 굵어지지 않도록 지정*/
 }
 #topMenu > li > ul {
     display: none;           /*서브메뉴 처음에는 감춤*/
     position: absolute;      /*서브메뉴가 topMenu와 어울리기 위함*/
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.6); /*배경 투명색*/
     left: 20px;
     margin: 0;
 }
@@ -85,33 +83,39 @@ nav {
 #topMenu > li > ul > li > a {
     font-size: 14px;
     padding: 10px;
-    color: #000;
+    color: #fff;
 }
 #topMenu > li:hover > ul {
     display: block;    /*메인 메뉴 항목 위로 오버하면 서브메뉴 표시*/
     z-index: 10;       /*슬라이드 쇼에 가리지 않게 조절*/
 }
-#topMenu > li > ul > li > a:hover {
-    color: #fff;
+#topMenu > li > ul > li:hover {
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 /*상단 이미지 영역*/
 .picture {
-    clear: both;
     width: 100%;
     height: 300px;
     overflow: hidden;
     position: relative;
+    background-image: url(../images/intro-1.jpg);
 }
 .location {
     position: absolute;
+    width: auto;
+    height: auto;
+    left: 0;
     bottom: 0;
-    width: 100%;
-    height: 50px;
-    background-color: rgba(255, 255, 255, 0.6);
-    text-align: right;
-    font-size: 22px;
+    margin: 60px 100px;
+    text-align: left;
+    font-size: 12px;
     font-weight: 400;
-    line-height: 50px; /*height값과 같게 만들어서 세로로 중간에 오도록 맞춤*/
-    padding-right: 20px; /*왼쪽 패딩 지정*/
+    color: #fff;
 }
+.here {
+    font-size: 35px;
+    font-weight: 300;
+    margin-left: -5px;
+}
+
