--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ ul {
 
 #container {
     margin: 0 auto;      /*화면 중앙에 배치*/
-    width: 100%;       /*너비 지정*/
+    width: 1200px;       /*너비 지정*/
 }
 
 /*헤더 영역*/
@@ -30,18 +30,16 @@ header {
     float: left;        /*왼쪽으로 플로팅*/
     width: 25%;       /*너비*/
     height: 100px;      /*높이*/
-
+    background-image: url("../images/logo2.png");
+    background-repeat: no-repeat;
+    background-position: center;
     /*로고가 중간에 오도록*/
     line-height: 100px; /*height값과 같게 만들어서 세로로 중간에 오도록 맞춤*/
     padding-left: 20px; /*왼쪽 패딩 지정*/
 }
-#logo h1 {
-    font-family: 'Gothic A1', sans-serif;
-    font-weight: 700;
-    font-size: 25px;                 /*폰트 크기*/
-    color: white;                   /*폰트 색상*/
-    text-shadow: 0 -1px 0 #222;    /*그림자색*/
-}
+
+
+
 
 /*내비게이션 영역*/
 nav {
@@ -128,23 +126,22 @@ nav {
 .contents01 {
     width: 100%;
     height: 600px; 
-    background-color: #fff; 
+    background-color: orange; 
     position: relative;
 }
 .photo {
     position: absolute;
     float: left;
-    width: 50%;
+    width: 600px;
     height: 400px;
-    margin: 100px 12.5%;
-    background-image: url("images/contents01.jpg");
+    margin: 100px;
     overflow: hidden;
     transform: translate(-100px, 0);
     opacity: 0;
     transition: all .5s ease;
 }
 .photo.show {
-    width: 50%;
+    width: 500px;
     opacity: 1;
     transform: none;
 }
@@ -153,7 +150,7 @@ nav {
     right: 0;
     width: 400px;
     height: auto;
-    margin: 100px 150px;
+    margin: 100px 100px;
     font-size: 20px;
     line-height: 30px;
     transform: translate(100px, 0);
