--- a/css/department.css
+++ b/css/department.css
@@ -29,17 +29,12 @@ header {
     float: left;        /*왼쪽으로 플로팅*/
     width: 300px;       /*너비*/
     height: 100px;      /*높이*/
-
+    background-image: url("../images/logo2.png");
+    background-repeat: no-repeat;
+    background-position: center;
     /*로고가 중간에 오도록*/
     line-height: 100px; /*height값과 같게 만들어서 세로로 중간에 오도록 맞춤*/
     padding-left: 20px; /*왼쪽 패딩 지정*/
-}
-#logo h1 {
-    font-family: 'Gothic A1', sans-serif;
-    font-weight: 700;
-    font-size: 40px;                 /*폰트 크기*/
-    color: white;                   /*폰트 색상*/
-    text-shadow: 0 -1px 0 #222;    /*그림자색*/
 }
 
 /*내비게이션 영역*/
