--- a/css/style.css
+++ b/css/style.css
@@ -30,15 +30,13 @@ header {
     float: left;        /*왼쪽으로 플로팅*/
     width: 25%;       /*너비*/
     height: 100px;      /*높이*/
-    background-image: url("../images/logo2.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    /*로고가 중간에 오도록*/
-    line-height: 100px; /*height값과 같게 만들어서 세로로 중간에 오도록 맞춤*/
-    padding-left: 20px; /*왼쪽 패딩 지정*/
 }
-
-
+#logo > a > img {
+    width: 40%;
+    height: 90%;
+    display: block;
+    margin: 5px auto;
+}
 
 
 /*내비게이션 영역*/
