--- a/css/style.css
+++ b/css/style.css
@@ -273,43 +273,39 @@ footer {
     height: 100px;     /*높이*/
     border-top: 2px solid #222;   /*위쪽에 가로선 추가*/
 }
-.bottomMenu {
-    width: 100%;
-    height: 20px;
-    position: relative;
-}
-.bottomMenu ul {
-    margin-top: 15px;
-}
-.bottomMenu ul li {
+.address {
     float: left;
-    padding: 5px 20px;
+    width: 24%;
+    height: 90px;
     border-right: 1px solid #ddd;
+    margin-left: 10px;
 }
-.bottomMenu ul li:last-child {
-    border-right: none;
+
+.tel {
+    float: left;
+    width: 24%;
+    height: 90px;
+    border-right: 1px solid #ddd;
+    margin-left: 10px;
 }
-.bottomMenu ul li a, .bottomMenu ul li:visited {
-    font-size: 15px;
-    color: #666;
+
+.fax {
+    float: left;
+    width: 24%;
+    height: 90px;
+    border-right: 1px solid #ddd;
+    margin-left: 10px;
 }
-.sns {
-    position: absolute;
-    right: 0;
+
+.business {
+    float: left;
+    width: 24%;
+    height: 90px;
+    margin-left: 10px;
 }
-.sns ul li {
-    border: none;
-    padding: 5px;
-}
-.company {
-    clear: left;
-    margin-top: 25px;
-    margin-left: 20px;
-}
-.company p {
-    font-size: 14px;
-    color: #aaa;
-    line-height: 20px;
+.what {
+    font-weight: 600;
+    color: #0066cc;
 }
 
 @media (min-width: 576px){
